# drinkbase

./: .dockerignore  .gitignore  .prettierrc.json  README.md  package-lock.json  package.json
.github/: dependabot.yml
API/: API_README.md  API_TODO_LIST.md  DrinkBase_methods.md  TODO.md  TODO_LIST.md  api.py  api_test.py  convert.py  convert_test.py  createAPI.sql  createDB.sh  createPGSQL.sh  createPGSQL_DB.sh  createSQLiteDB.sh  drinkStore.py  main.py
API/drinkStore/: drinkStore.py
API/drinkViz/: TODO_list.md  drinkViz.html  readme.md
API/pgsql/: createDB.sql  (+3 more)
backend/: API_README.md  DrinkStore.py  README.md  api.py  defunct_main.py  drinkStore.py  finder.py  main.py  pyproject.toml
backend/configs/: deploy.sh  drinkFinder.wsgi
backend/docker/: docker-compose.yaml
backend/docker/api/conf/: apache2.conf  drinkbase.conf  ports.conf
backend/docker/postgresql/: Dockerfile
backend/docker/postgresql/data/: init.sql  tables.sql
backend/drinkViz/: drinkViz.html
backend/drinkViz/data/: OLD_DO_NOT_USE_prep.csv  sampleOutput1.json
backend/src/: app.py  drinkbase.py  drinkbase.wsgi  main.py
backend/store/: pgStore.py
backend/templates/: defunct_index.html  index.html
backend/test/: api_test.py  conftest.py  exclusions.py  test_api.py  test_drinkbase.py
backend/tests/: exclusions.py
deployment/: apacheNotes.md  dependencies.md  deploy.sh
docker/: .env  docker-compose.yaml
frontend/: package-lock.json  package.json
public/: index.html
scripts/: deploy.sh  down.sh  prep.sh
src/: Main.js  Namesearch.js  drinkViz.js  index.js  ipAddress.js
(+137 files in other folders)
