[tool.poetry]
name = "drinkbase"
version = "0.1.0"
description = "flask/postgres cocktail backend rest API"
authors = ["ntbloom <user@localhost>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.8.6"
Flask = "^2.0.1"
requests = "^2.25.1"
gunicorn = "^20.1.0"
docker = "^5.0.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
flake8 = "^3.9.2"
pytest = "^6.2.4"

[tool.pytest.ini_options]
log_cli_level = "INFO"
log_cli = true
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
